--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "async": "^2.5.0",
     "crypto": "0.0.3",
     "ejs": "2.3.4",
     "grunt": "1.0.1",
