--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "async": "^2.5.0",
     "crypto": "0.0.3",
     "ejs": "2.3.4",
+    "fluent-ffmpeg": "^2.1.2",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
     "grunt-contrib-coffee": "1.0.0",
@@ -20,12 +21,15 @@
     "grunt-contrib-watch": "1.0.0",
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.5.2",
+    "hls-server": "^1.1.1",
     "include-all": "^1.0.0",
     "jsonwebtoken": "^7.4.2",
+    "node-rtsp-stream": "0.0.3",
     "rc": "1.0.1",
     "sails": "~0.12.13",
     "sails-disk": "~0.10.9",
     "sails-mongo": "^0.12.2",
+    "send": "^0.15.4",
     "shortid": "^2.2.8"
   },
   "scripts": {
