--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "sails-disk": "~0.10.9",
     "sails-mongo": "^0.12.2",
     "send": "^0.15.4",
-    "shortid": "^2.2.8"
+    "shortid": "^2.2.8",
+    "webdriverio": "^4.8.0"
   },
   "scripts": {
     "debug": "node debug app.js",
