--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hls-server": "^1.1.1",
     "include-all": "^1.0.0",
     "jsonwebtoken": "^7.4.2",
+    "node-cmd": "^3.0.0",
     "node-rtsp-stream": "0.0.3",
     "rc": "1.0.1",
     "sails": "~0.12.13",
@@ -31,6 +32,7 @@
     "sails-mongo": "^0.12.2",
     "send": "^0.15.4",
     "shortid": "^2.2.8",
+    "trim": "0.0.1",
     "webdriverio": "^4.8.0"
   },
   "scripts": {
