--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "crypto": "0.0.3",
     "ejs": "2.3.4",
     "fluent-ffmpeg": "^2.1.2",
+    "fs-extra": "^4.0.1",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
     "grunt-contrib-coffee": "1.0.0",
@@ -26,11 +27,13 @@
     "jsonwebtoken": "^7.4.2",
     "node-cmd": "^3.0.0",
     "node-rtsp-stream": "0.0.3",
+    "ps-tree": "^1.1.0",
     "rc": "1.0.1",
     "sails": "~0.12.13",
     "sails-disk": "~0.10.9",
     "sails-mongo": "^0.12.2",
     "send": "^0.15.4",
+    "shelljs": "^0.7.8",
     "shortid": "^2.2.8",
     "trim": "0.0.1",
     "webdriverio": "^4.8.0"
