--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hls-server": "^1.1.1",
     "include-all": "^1.0.0",
     "jsonwebtoken": "^7.4.2",
+    "node-async-loop": "^1.2.2",
     "node-cmd": "^3.0.0",
     "node-rtsp-stream": "0.0.3",
     "node-schedule": "^1.2.4",
