--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.5.2",
     "hls-server": "^1.1.1",
+    "in-array": "^0.1.2",
     "include-all": "^1.0.0",
     "jsonwebtoken": "^7.4.2",
     "node-async-loop": "^1.2.2",
